RESOLVED FIXED112998
[BlackBerry] Memory leak in UserMediaClientImpl
https://bugs.webkit.org/show_bug.cgi?id=112998
Summary [BlackBerry] Memory leak in UserMediaClientImpl
Xiaobo Wang
Reported 2013-03-21 20:22:34 PDT
Should destroy itself in UserMediaClientImpl::pageDestroyed(), as other XXClientBlackBerry did, like GeolocationClientBlackBerry::geolocationDestroyed().
Attachments
patch (2.33 KB, patch)
2013-03-21 21:09 PDT, Xiaobo Wang
no flags
patch (2.33 KB, patch)
2013-03-21 21:20 PDT, Xiaobo Wang
no flags
Xiaobo Wang
Comment 1 2013-03-21 21:09:21 PDT
WebKit Review Bot
Comment 2 2013-03-21 21:13:23 PDT
Attachment 194433 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/ChangeLog', u'Source/WebKit/blackberry/WebCoreSupport/UserMediaClientImpl.cpp']" exit_code: 1 Source/WebKit/blackberry/WebCoreSupport/UserMediaClientImpl.cpp:113: Tab found; better to use spaces [whitespace/tab] [1] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xiaobo Wang
Comment 3 2013-03-21 21:20:09 PDT
Created attachment 194435 [details] patch Tab replaced.
Xiaobo Wang
Comment 4 2013-03-21 21:21:21 PDT
Comment on attachment 194433 [details] patch OK
Xiaobo Wang
Comment 5 2013-03-21 21:21:42 PDT
Comment on attachment 194433 [details] patch OK
Rob Buis
Comment 6 2013-03-22 05:39:42 PDT
Comment on attachment 194435 [details] patch LGTM.
Charles Wei
Comment 7 2013-03-26 03:40:28 PDT
Comment on attachment 194435 [details] patch commit it.
WebKit Review Bot
Comment 8 2013-03-26 03:46:48 PDT
Comment on attachment 194435 [details] patch Clearing flags on attachment: 194435 Committed r146865: <http://trac.webkit.org/changeset/146865>
WebKit Review Bot
Comment 9 2013-03-26 03:46:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.