[BlackBerry] Memory leak in UserMediaClientImpl https://bugs.webkit.org/show_bug.cgi?id=112998

Patch by Xiaobo Wang <xbwang@torchmobile.com.cn> on 2013-03-26
Reviewed by Rob Buis.

PR 312559
Internally Reviewed by Anthony Scian.

Should destroy itself in UserMediaClientImpl::pageDestroyed(), as other
XXClientBlackBerry did, like GeolocationClientBlackBerry::geolocationDestroyed().

* WebCoreSupport/UserMediaClientImpl.cpp:
(WebCore::UserMediaClientImpl::pageDestroyed):

git-svn-id: svn://svn.chromium.org/blink/trunk@146865 bbb929c8-8fbe-4397-9dbb-9b2b20218538