third_party/WebKit/Source/WebKit/blackberry/WebCoreSupport/UserMediaClientImpl.cpp
@@ -111,6 +111,7 @@ UserMediaClientImpl::~UserMediaClientImpl()
 
 void UserMediaClientImpl::pageDestroyed()
 {
+    delete this;
 }
 
 void UserMediaClientImpl::requestUserMedia(PassRefPtr<UserMediaRequest> prpRequest, const MediaStreamSourceVector& audioSources, const MediaStreamSourceVector& videoSources)
